[package]
name = "arkworks-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = {version = "0.5.0", default-features = false, features = ["curve"]}
ark-crypto-primitives = {version = "0.5.0", default-features = false, features = ["snark", "crh", "r1cs"]}
ark-ec = {version = "0.5.0", default-features = false}
ark-ff = {version = "0.5.0", default-features = false}
ark-groth16 = { version = "0.5.0" }
ark-poly = {version = "0.5.0", default-features = false}
ark-r1cs-std = {version = "0.5.0", default-features = false }
ark-relations = {version = "0.5.0", default-features = false}
ark-serialize = {version = "0.5.0", default-features = false, features = ["derive"]}
ark-std = {version = "0.5.0", default-features = false}
hex = "0.4.3"
