[package]
name = "arkworks-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bn254 = {version = "0.5.0", default-features = false, features = ["curve"]}
ark-crypto-primitives = {version = "0.5.0", default-features = false, features = ["snark", "crh", "r1cs"]}
ark-ec = {version = "0.5.0", default-features = false}
ark-ff = {version = "0.5.0", default-features = false}
ark-groth16 = { version = "0.5.0" }
ark-poly = {version = "0.5.0", default-features = false}
ark-r1cs-std = {version = "0.5.0", default-features = false }
ark-relations = {version = "0.5.0", default-features = false}
ark-serialize = {version = "0.5.0", default-features = false, features = ["derive"]}
ark-std = {version = "0.5.0", default-features = false}
hex = "0.4.3"

[profile.release]
debug = true              # Enables debug info (DWARF sections)
split-debuginfo = "off"   # Keeps DWARF in binary (not split into .dwo files)
opt-level = 3             # Still optimized
lto = false               # Optional: easier for profilers to map symbols
codegen-units = 1         # Optional: better inlining info

